# TITUS-AI-School-Chatbot

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql
alembic/: env.py
alembic/versions/: 2026_06_30_0301-e4c64c56e3cf_create_users_table.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  base.py  user.py
